--- a/HTML/firstPage.html
+++ b/HTML/firstPage.html
@@ -9,6 +9,18 @@
 <body>
     <!-- content goes in the body -->
     <h1>This is my first tag!!!</h1>
+    <h2>This is another heading</h2>
+    <h6>This is another heading!!!</h6>
+
+    <p>
+        Lorem ipsum dolor <strong>sit amet</strong>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+        ut labore et dolore magna aliquyam erat, sed diam voluptua. <em>At vero eos et accusam</em> et justo duo dolores
+        et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
+        diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+        takimata sanctus est Lorem ipsum dolor sit amet.
+    </p>
 </body>
 
 </html>
