--- a/HTML/firstPage.html
+++ b/HTML/firstPage.html
@@ -21,6 +21,29 @@
         diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet.
     </p>
+
+    <h4>My Color List</h4>
+    <ol>
+        <li>Red</li>
+        <li>Orange</li>
+        <li>Yellow
+            <ul>
+                <li>Sunflower</li>
+                <li>Banana
+                    <ol>
+                        <li>Frozen Banana</li>
+                        <li>Non-Frozen Banana</li>
+                    </ol>
+                </li>
+            </ul>
+        </li>
+    </ol>
+
+    <ul>
+        <li><strong>Red</strong></li>
+        <li>Orange</li>
+        <li>Yellow</li>
+    </ul>
 </body>
 
 </html>
