a quick introduction to HTML links

--- a/HTML/firstPage.html
+++ b/HTML/firstPage.html
@@ -12,6 +12,12 @@
     <h2>This is another heading</h2>
     <h6>This is another heading!!!</h6>
 
+    <img
+        src="https://img.buzzfeed.com/buzzfeed-static/static/enhanced/terminal01/2011/5/31/9/enhanced-buzz-3250-1306849022-0.jpg">
+
+    <a href="https://www.google.com">Click me to go to Google</a>
+
+    <a href="page2.html">Go to page 2</a>
     <p>
         Lorem ipsum dolor <strong>sit amet</strong>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
         ut labore et dolore magna aliquyam erat, sed diam voluptua. <em>At vero eos et accusam</em> et justo duo dolores
