--- a/CSS/photoGrid/photoGrid.html
+++ b/CSS/photoGrid/photoGrid.html
@@ -3,10 +3,15 @@
 
 <head>
     <title>Photo Blog</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="photos.css" type="text/css">
 </head>
 
 <body>
+    <p>Laurent/Dormoy</p>
+
     <!-- Massimo Margagnoni -->
     <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
     <img src="http://c2.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg">
