--- a/CSS/Bootstrap/gallery.html
+++ b/CSS/Bootstrap/gallery.html
@@ -6,6 +6,7 @@
     <title>Image Gallery</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="gallery.css" type="text/css">
 </head>
 
@@ -38,7 +39,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
+            <h1><i class="fas fa-camera-retro"></i> The Image Gallery</h1>
             <p>The best images, trust me</p>
         </div>
 
