--- a/CSS/Bootstrap/PurrfectMatch/index.html
+++ b/CSS/Bootstrap/PurrfectMatch/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         type="text/css">
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -35,10 +36,10 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" href="#">Sign Up <i class="fa fa-user-plus"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="#">Login <i class="fa fa-user"></i></a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +53,8 @@
                     <h1>Purrfect Match</h1>
                     <h3>The Only Human-Feline Dating App</h3>
                     <hr>
-                    <button class="btn btn-default btn-lg">Get Started!</button>
+                    <button class="btn btn-default btn-lg"><i class="fa fa-paw" aria-hidden="true"></i> Get
+                        Started!</button>
                 </div>
             </div>
         </div>
