Javascript arrays - improved Todo list

--- a/Javascript/04 Arrays/list.html
+++ b/Javascript/04 Arrays/list.html
@@ -14,6 +14,7 @@
         <h1>Todo List</h1>
         <li>"new" - Add a Todo</li>
         <li>"list" - List all Todos</li>
+        <li>"delete" - Remove a specific Todo</li>
         <li>"quit" - Quit App</li>
     </ul>
 </body>
