--- a/Color Game Project/index.html
+++ b/Color Game Project/index.html
@@ -10,10 +10,17 @@
 </head>
 
 <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The Great
+        <br>
+        <span id="colorDisplay">RGB</span>
+        <br>
+        Color Game</h1>
 
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button class="mode">Easy</button>
+        <button class="mode" class="selected">Hard</button>
     </div>
 
     <div id="container">
