Color Game Project - fixes Hard button slected class

--- a/Color Game Project/index.html
+++ b/Color Game Project/index.html
@@ -20,7 +20,7 @@
         <button id="reset">New Colors</button>
         <span id="message"></span>
         <button class="mode">Easy</button>
-        <button class="mode" class="selected">Hard</button>
+        <button class="mode selected">Hard</button>
     </div>
 
     <div id="container">
