--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <script src="assets/js/lib/jquery-3.4.1.min.js" type="text/javascript"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text">
+        <h1>To-Do List <i class="fa fa-plus"></i></h1>
+        <input type="text" placeholder="Add New Todo">
 
         <ul>
-            <li><span>X</span> Go To Potions</li>
-            <li><span>X</span> Buy New Robes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="fa fa-trash"></i></span> Go To Potions</li>
+            <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+            <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
         </ul>
     </div>
     <script src="assets/js/todos.js" type="text/javascript"></script>
